added tex files

--- a/tex/extra2.tex
+++ b/tex/extra2.tex
@@ -1,5 +1,5 @@
-\documentclass[times]{article} % For aTeX2e
-\usepackage{nips12submit_e}
+\documentclass{article} % For aTeX2e
+%\usepackage{nips12submit_e}
 \usepackage[numbers]{natbib}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -7,8 +7,8 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 
-\input{../definitions}
-\input{../notationDef}
+\input{definitions}
+\input{notationDef}
 
 \newcommand{\noti}{{\backslash i}}
 \renewcommand{\d}{\,\text d}
